🚑 Fix broken layout for safari and firefox

--- a/src/project/static/css/main.css
+++ b/src/project/static/css/main.css
@@ -2416,10 +2416,6 @@ textarea {
     margin-top: 8rem;
   }
 
-  .sm\:mt-auto {
-    margin-top: auto;
-  }
-
   .sm\:block {
     display: block;
   }
